compiler/tests/compiler/must_fail/t_25.mil.exp.err
Parsing tests/compiler/must_fail/t_25.mil as MIL

tests/compiler/must_fail/t_25.mil:4:10: 4:11 error: return storage type for x wrong
  return x;
         ^^
tests/compiler/must_fail/t_25.mil:3:33: 3:41 error: <-- return storage declared here
extern fn test(x : reg bool) -> stack u64 {
                                ^^^^^^^^^
tests/compiler/must_fail/t_25.mil:3:16: 3:17 error: <-- variable declared here
extern fn test(x : reg bool) -> stack u64 {
               ^^
