compiler/tests/compiler/must_fail/t_25.mil
// wrong return type

extern fn test(x : reg bool) -> stack u64 {
  return x;
}

/*
START:CMD
ARG="renumber_fun_unique,typecheck"
END:CMD
*/
